--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 :root {
   --primary-bg-color: #f7fbfd;
   --primary-accent: #0c1618;
-  --secondary-accent: #6f1d1b;
+  --secondary-accent: #032dff;
 
   --main-text-color: #0c1618;
   --supportive-text-color: #242d2f;
